租户功能初始化简单测试和完善
