# dto/app.go
@@ -52,7 +52,7 @@ func (params *APPDeleteInput) GetValidParams(c *gin.Context) error {
 	return public.DefaultGetValidParams(c, params)
 }
 
-type AppAddAppInput struct {
+type AppAddInput struct {
 	AppID    string `json:"app_id" form:"app_id" comment:"租户id" validate:"required"`
 	Name     string `json:"name" form:"name" comment:"租户名称" validate:"required"`
 	Secret   string `json:"secret" form:"secret" comment:"密钥" validate:""`
@@ -61,7 +61,7 @@ type AppAddAppInput struct {
 	Qps      int64  `json:"qps" form:"qps" comment:"每秒请求量限制" validate:""`
 }
 
-func (params *AppAddAppInput) GetValidParams(c *gin.Context) error {
+func (params *AppAddInput) GetValidParams(c *gin.Context) error {
 	return public.DefaultGetValidParams(c, params)
 }
 
@@ -76,4 +76,18 @@ func (params *APPStatisticsInput) GetValidParams(c *gin.Context) error {
 type APPStatisticsOutput struct {
 	Today     []int64 `json:"today" form:"today" comment:"今日统计" validate:"required"`
 	Yesterday []int64 `json:"yesterday" form:"yesterday" comment:"昨日统计" validate:"required"`
+}
+
+type APPUpdateInput struct {
+	ID       int64  `json:"id" form:"id" gorm:"column:id" comment:"主键ID" validate:"required"`
+	AppID    string `json:"app_id" form:"app_id" gorm:"column:app_id" comment:"租户id" validate:""`
+	Name     string `json:"name" form:"name" gorm:"column:name" comment:"租户名称" validate:"required"`
+	Secret   string `json:"secret" form:"secret" gorm:"column:secret" comment:"密钥" validate:"required"`
+	WhiteIPS string `json:"white_ips" form:"white_ips" gorm:"column:white_ips" comment:"ip白名单，支持前缀匹配		"`
+	Qpd      int64  `json:"qpd" form:"qpd" gorm:"column:qpd" comment:"日请求量限制"`
+	Qps      int64  `json:"qps" form:"qps" gorm:"column:qps" comment:"每秒请求量限制"`
+}
+
+func (params *APPUpdateInput) GetValidParams(c *gin.Context) error {
+	return public.DefaultGetValidParams(c, params)
 }
